major change of folder structure - part 2
renamed samples folder to example

--- a/example/example09/example09.html
+++ b/example/example09/example09.html
@@ -17,7 +17,7 @@
     <br/>
     <a href="../../index.html">back to overview</a>
 	
-    <script type="application/dart" src="sample09.dart"></script>
+    <script type="application/dart" src="example09.dart"></script>
     <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
             
   </body>
