--- a/example/example01/example01.html
+++ b/example/example01/example01.html
@@ -12,7 +12,7 @@
     <br/><br/>
     <a href="../../index.html">back to overview</a>
 	
-    <script type="application/dart" src="sample01.dart"></script>
+    <script type="application/dart" src="example01.dart"></script>
     <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
 	
   </body>
