added dependency to browser package

--- a/example/example09/example09.html
+++ b/example/example09/example09.html
@@ -17,7 +17,7 @@
     </div>
     
     <script type="application/dart" src="example09.dart"></script>
-    <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
+    <script src="packages/browser/dart.js"></script>
             
   </body>
 </html>
