--- a/example/example10/example10.html
+++ b/example/example10/example10.html
@@ -13,7 +13,7 @@
 	NASA copyright policy states that "NASA material is not protected by copyright unless noted".</p>
 	
     <script type="application/dart" src="example10.dart"></script>
-    <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
+    <script src="packages/browser/dart.js"></script>
 	            
   </body>
 </html>
