--- a/example/example01/example01.html
+++ b/example/example01/example01.html
@@ -11,7 +11,7 @@
     <canvas id="stage" width="800" height="600" style="border: 1px dotted black;" ></canvas>
 
     <script type="application/dart" src="example01.dart"></script>
-    <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
+    <script src="packages/browser/dart.js"></script>
 
   </body>
 </html>
