deprecated MovieClip, new class is FlipBook

--- a/example/example07/example07.html
+++ b/example/example07/example07.html
@@ -6,7 +6,7 @@
   </head> 
   <body>
 
-    <h1>TextureAtlas and MovieClip</h1>
+    <h1>TextureAtlas and FlipBook</h1>
 
     <canvas id="stage" width="800" height="600" style="border: 1px dotted black;" ></canvas>
 
