--- a/example/example01/example01.html
+++ b/example/example01/example01.html
@@ -7,13 +7,9 @@
   <body>
 
     <h1>Initialization of Stage and RenderLoop</h1>
-<!--
-    <div style="border: 20pt dotted black; padding: 10pt; width:800px; height:600px;">
-      <canvas id="stage" width="800" height="600"></canvas>
-    </div>
--->
-    <canvas id="stage" width="800" height="600" style="border: 20px solid black; margin: 15px;"></canvas>
 
+    <canvas id="stage" width="800" height="600" style="border: 1px dotted black; "></canvas>
+        
     <script type="application/dart" src="example01.dart"></script>
     <script src="packages/browser/dart.js"></script>
 
