--- a/test/test_runner.html
+++ b/test/test_runner.html
@@ -6,6 +6,7 @@
   </head>
  
   <body>   
+    <script type="text/javascript" src="packages/unittest/test_controller.js"></script>
     <script type="application/dart" src="test_runner.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
