--- a/example/example13/example13.html
+++ b/example/example13/example13.html
@@ -6,7 +6,7 @@
   </head> 
   <body>
 
-    <h1>Initialization of Stage and RenderLoop</h1>
+    <h1>MovieClip animation</h1>
 
     <canvas id="stage" width="800" height="600" style="border: 1px dotted black; "></canvas>
         
