Updated example12 to show text input.

--- a/example/example12/example12.html
+++ b/example/example12/example12.html
@@ -3,15 +3,14 @@
 <html>
   <head>
     <title>Demo01</title>
-  </head> 
+  </head>
   <body>
 
-    <h1>Flash timeline animations converted with &apos;Flump&apos;</h1>
+    <h1>Textfield Input.</h1>
 
     <canvas id="stage" width="800" height="600" style="border: 1px dotted black;" ></canvas>
 
     <script type="application/dart" src="example12.dart"></script>
     <script src="packages/browser/dart.js"></script>
-
   </body>
 </html>
