example source code modernization

--- a/example/example01/example01.html
+++ b/example/example01/example01.html
@@ -3,13 +3,14 @@
 <html>
   <head>
     <title>Demo01</title>
-  </head> 
+    <link rel="stylesheet" href="example01.css">
+  </head>
   <body>
 
     <h1>Initialization of Stage and RenderLoop</h1>
 
     <canvas id="stage" width="800" height="600" style="border: 1px dotted black; "></canvas>
-        
+
     <script type="application/dart" src="example01.dart"></script>
     <script src="packages/browser/dart.js"></script>
 
