--- a/example/example03/example03.html
+++ b/example/example03/example03.html
@@ -3,15 +3,16 @@
 <html>
   <head>
     <title>Demo03</title>
-  </head> 
+    <link rel="stylesheet" href="example03.css">
+  </head>
   <body>
-  
+
     <h1>Fun with Sprites</h1>
-    
+
     <canvas id="stage" width="800" height="600" style="border: 1px dotted black;" ></canvas>
-  
+
     <script type="application/dart" src="example03.dart"></script>
     <script src="packages/browser/dart.js"></script>
-        
+
   </body>
 </html>
