--- a/example/example04/example04.html
+++ b/example/example04/example04.html
@@ -3,15 +3,16 @@
 <html>
   <head>
     <title>Demo04</title>
-  </head> 
+    <link rel="stylesheet" href="example04.css">
+  </head>
   <body>
-  
+
     <h1>SimpleButton, TextField, Sound and Events</h1>
 
     <canvas id="stage" width="800" height="600" style="border: 1px dotted black;" ></canvas>
 
     <script type="application/dart" src="example04.dart"></script>
     <script src="packages/browser/dart.js"></script>
-            
+
   </body>
 </html>
