--- a/example/example05/example05.html
+++ b/example/example05/example05.html
@@ -3,15 +3,16 @@
 <html>
   <head>
     <title>Demo05</title>
-  </head> 
+    <link rel="stylesheet" href="example05.css">
+  </head>
   <body>
-  
+
     <h1>Animations with Tweens</h1>
 
     <canvas id="stage" width="800" height="600" style="border: 1px dotted black;" ></canvas>
 
     <script type="application/dart" src="example05.dart"></script>
     <script src="packages/browser/dart.js"></script>
-            
+
   </body>
 </html>
