--- a/example/example06/example06.html
+++ b/example/example06/example06.html
@@ -3,15 +3,16 @@
 <html>
   <head>
     <title>Demo06</title>
-  </head> 
+    <link rel="stylesheet" href="example06.css">
+  </head>
   <body>
-  
+
     <h1>Shape and Graphics</h1>
 
     <canvas id="stage" width="800" height="600" style="border: 1px dotted black;" ></canvas>
-    
+
     <script type="application/dart" src="example06.dart"></script>
     <script src="packages/browser/dart.js"></script>
-            
+
   </body>
 </html>
