--- a/example/example07/example07.html
+++ b/example/example07/example07.html
@@ -3,7 +3,8 @@
 <html>
   <head>
     <title>Demo07</title>
-  </head> 
+    <link rel="stylesheet" href="example07.css">
+  </head>
   <body>
 
     <h1>TextureAtlas and FlipBook</h1>
@@ -12,6 +13,6 @@
 
     <script type="application/dart" src="example07.dart"></script>
     <script src="packages/browser/dart.js"></script>
-        
+
   </body>
 </html>
