--- a/example/example13/example13.html
+++ b/example/example13/example13.html
@@ -3,13 +3,14 @@
 <html>
   <head>
     <title>Demo13</title>
-  </head> 
+    <link rel="stylesheet" href="example13.css">
+  </head>
   <body>
 
     <h1>MovieClip animation</h1>
 
     <canvas id="stage" width="800" height="600" style="border: 1px dotted black; "></canvas>
-        
+
     <script type="application/dart" src="example13.dart"></script>
     <script src="packages/browser/dart.js"></script>
 
