--- a/example/example10/example10.html
+++ b/example/example10/example10.html
@@ -3,17 +3,18 @@
 <html>
   <head>
     <title>Demo10</title>
-  </head> 
+    <link rel="stylesheet" href="example10.css">
+  </head>
   <body>
-  
+
     <h1>Filters</h1>
 
     <canvas id="stage" width="800" height="600" style="border: 1px dotted black;" ></canvas>
-	<p>This image is in the public domain because it was solely created by <a href="http://www.nasa.gov" target="_blank"/>NASA</a>.<br /> 
+	<p>This image is in the public domain because it was solely created by <a href="http://www.nasa.gov" target="_blank"/>NASA</a>.<br />
 	NASA copyright policy states that "NASA material is not protected by copyright unless noted".</p>
-	
+
     <script type="application/dart" src="example10.dart"></script>
     <script src="packages/browser/dart.js"></script>
-	            
+
   </body>
 </html>
