--- a/example/example10/example10.html
+++ b/example/example10/example10.html
@@ -5,7 +5,7 @@
     <title>Demo10</title>
     <link rel="stylesheet" href="example10.css">
   </head>
-  <body>
+  <body style="background-color:#E0E0E0">
 
     <h1>Filters</h1>
 
