Fix example and dart formatting.

--- a/example/index.html
+++ b/example/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="StageXL Example.">
 
     <link rel="stylesheet" href="index.css">
-    <script defer src="index.dart.js"></script>
+    <script defer src="main.dart.js"></script>
 </head>
 
 <body class="stage-full-window">
